unpackaged/main/default/objects/pro_Piece_Part_Quote__c/pro_Piece_Part_Quote__c.object-meta.xml
<CustomObject>
    <label>Piece Part Quote</label>
    <nameField>
        <displayFormat>PP-Q {00000000}</displayFormat>
        <label>Piece Part Quote Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Piece Part Quotes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>