unpackaged/main/default/objects/pro_Piece_Part_Quote__c/fields/pro_Condition_Code__c.field-meta.xml
<CustomField>
    <fullName>pro_Condition_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Condition Code</label>
    <referenceTo>inscor__Condition_Code__c</referenceTo>
    <relationshipLabel>Piece Part Quotes</relationshipLabel>
    <relationshipName>Piece_Part_Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>