unpackaged/main/default/objects/pro_Piece_Part_Quote__c/fields/pro_Part_Cost__c.field-meta.xml
<CustomField>
    <fullName>pro_Part_Cost__c</fullName>
    <label>Part Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>