unpackaged/main/default/objects/pro_Piece_Part_Quote__c/fields/pro_Piece_Part_Request__c.field-meta.xml
<CustomField>
    <fullName>pro_Piece_Part_Request__c</fullName>
    <label>Piece Part Request</label>
    <referenceTo>pro_Piece_Part_Request__c</referenceTo>
    <relationshipLabel>Piece Part Quotes</relationshipLabel>
    <relationshipName>Piece_Part_Quotes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>