unpackaged/main/default/objects/pro_Piece_Part_Quote__c/fields/pro_Preferred_Supplier__c.field-meta.xml
<CustomField>
    <fullName>pro_Preferred_Supplier__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Preferred Supplier</label>
    <type>Checkbox</type>
</CustomField>