unpackaged/main/default/objects/pro_Piece_Part_Quote__c/fields/pro_Price__c.field-meta.xml
<CustomField>
    <fullName>pro_Price__c</fullName>
    <label>Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>