unpackaged/main/default/objects/pro_Piece_Part_Quote__c/fields/pro_Quantity__c.field-meta.xml
<CustomField>
    <fullName>pro_Quantity__c</fullName>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>