unpackaged/main/default/objects/pro_Piece_Part_Quote__c/fields/pro_Savings__c.field-meta.xml
<CustomField>
    <fullName>pro_Savings__c</fullName>
    <formula>pro_Piece_Part_Request__r.pro_Shop_Estimated_Total__c - pro_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Savings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>