unpackaged/main/default/objects/pro_Piece_Part_Quote__c/fields/pro_Shop_Fit_Fee__c.field-meta.xml
<CustomField>
    <fullName>pro_Shop_Fit_Fee__c</fullName>
    <label>Shop Fit Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>