unpackaged/main/default/objects/pro_Piece_Part_Quote__c/fields/pro_Supplier__c.field-meta.xml
<CustomField>
    <fullName>pro_Supplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Piece Part Quotes</relationshipLabel>
    <relationshipName>Piece_Part_Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>