unpackaged/main/default/objects/pro_Piece_Part_Quote__c/fields/pro_Total__c.field-meta.xml
<CustomField>
    <fullName>pro_Total__c</fullName>
    <formula>(pro_Part_Cost__c + pro_Shop_Fit_Fee__c) * pro_Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>